<resources>
    <string name="app_name" translatable="false">Smart Child</string>
    <string name="ayollar">Ayollar</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="AboutMe">Toshkent Axborot Texnologiyalari Universiteti</string>
    <string name="AboutCourse">4-Kurs talabasi</string>
    <string name="IjtimoiyTarmoqText">Ruzimov Jasurbekning Ijtimoiy tarmoqlardagi sahifalari:</string>
    <string name="Jasurbek_Ruzimov">Jasurbek Ro\'zimov</string>
    <string name="website">https://jasurbekruzimov.uz</string>
    <string name="todo">TODO</string>
    <string name="title_activity_shapes">Shapes</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Keyingi</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start">Start</string>
    <string name="accountdan_chiqib_ketmoqchimisiz">Accountdan chiqib ketmoqchimisiz?</string>
    <string name="chiqish_amalga_oshmoqda">Chiqish amalga oshmoqda...</string>
    <string name="siz_avtorizatsiyadan_o_tmadingiz">Siz avtorizatsiyadan o\'tmadingiz</string>

    <string name="instruction_title">What is the Puzzle 15?</string>
    <string name="instruction_description"> The puzzle was "invented" by Noyes Palmer Chapman, a postmaster in Canastota, New York, who is said to have shown friends,
        as early as 1874,a precursor puzzle consisting of 16 numbered blocks that were to be put together in rows of four.
        The 15 puzzle (also called Gem Puzzle, Boss Puzzle, Game of Fifteen, Mystic Square and many others) is a sliding puzzle having 15 square tiles numbered 1–15
        in a frame that is 4 tiles high and 4 tiles wide, leaving one unoccupied tile position. Tiles in the same row or column of the open position can be moved
        by sliding them horizontally or vertically, respectively. The goal of the puzzle is to place the tiles in numerical order.</string>
    <string name="instruction_play_description">"To win the game you should alter the squares and located them to right position. When the numbers find their place their background color change to green and if all numbers find their place you will be winner on this game. \nNOTE: You should finish the game in the given time. "</string>
    <string name="how_to_play_it">How to play it?</string>
    <string name="good_luck">Good Luck !!!</string>
    <string name="settings">Settings</string>
    <string name="sound">Sound</string>
    <string name="time">Time</string>
    <string name="home">Home</string>
    <string name="resume">RESUME</string>
    <string name="player_name">Player Name</string>
    <string name="ratings">Ratings</string>
    <string name="instruction">Instruction</string>
    <string name="play">Play</string>
    <string name="soon">Soon...</string>
    <string name="powered_by_bekdiyor">Powered by Jasurbek</string>
    <string name="puzzle_15">Puzzle 15</string>
    <string name="ertak_nomi">Ertak nomi ...</string>
    <string name="jonivorlarning_sarguzashtlari">Jonivorlarning sarguzashtlari</string>
    <string name="Boshlash">BOSHLASH</string>
    <string name="OrqagaQaytish">Orqaga</string>
    <string name="o_yin_tugadi">O\'yin tugadi</string>
    <string name="bo_limlar_ro_yxati">Bo\'limlar ro\'yxati</string>
    <string name="natijalar">Natijalar</string>
    <string name="jami_savollar_soni">Jami savollar</string>
    <string name="to_g_ri_javob">To\'g\'ri javob</string>
    <string name="noto_g_ri_javob">Noto\'g\'ri javob</string>
</resources>